gcc/testsuite/rust/rustc/ui/issues/issue-49934-errors_dg.rs
fn foo<#[derive(Debug)] T>() { // { dg-error "" "" { target *-*-* } }
    match 0 {
        #[derive(Debug)] // { dg-error "" "" { target *-*-* } }
        _ => (),
    }
}

fn main() {}

